# cooler

./: .editorconfig  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  README.rst  pyproject.toml
.github/workflows/: health-actions.yml
cooler/: crud.py  database.py  main.py  models.py  routers.py  schemas.py
tests/: test_cooler.py  test_main.py  test_routers.py
