[tool.poetry]
name = "cooler"
version = "0.1.0"
description = ""
authors = ["Yasmin Teles <teles.yasmin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.73.0"
uvicorn = {extras = ["standard"], version = "^0.17.4"}

[tool.poetry.dev-dependencies]
pytest = "^7.0"
requests = "^2.27.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "cooler.main:start"
